--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,17 @@ a {
   z-index: 1; /* Asegura que la barra de navegación esté por encima del overlay */
 }
 
+.image-container {
+  position: relative;
+}
+
+/* Estilos para la imagen */
+.custom-image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
 .homepage {
   background-image: url('../media/background.jpg');
   background-size: cover; 
@@ -34,6 +45,17 @@ a {
 }
 
 
+/* Estilos para el texto */
+.image-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para mejorar la legibilidad del texto */
+  color: #fff; /* Color del texto */
+  padding: 10px; /* Espaciado interior para mejorar la presentación */
+  text-align: center; /* Centrar el texto horizontalmente */
+}
 /*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
